# edu-axum

./: Cargo.toml  README.md
docker/: Dockerfile
scripts/: dattach.zsh  dbuild.zsh  drun.zsh  get-header.zsh  get-query.zsh  get-shared.zsh  get-user-agent.zsh  get.zsh  post.zsh  request.json  square.zsh
src/: handlers.rs  main.rs
src/handlers/: header.rs  mod.rs  square.rs  state.rs  sum.rs
